--- a/themes/nightfall/layouts/_default/list.html
+++ b/themes/nightfall/layouts/_default/list.html
@@ -1,49 +1,66 @@
-{{ define "title"}}
-{{ .Title }} | {{ .Site.Params.author.name }}
-{{ end }}
+<!DOCTYPE html>
+<html lang="{{ .Site.LanguageCode }}">
 
-{{ define "main" }}
+<head>
+    <title>
+        {{ i18n "home" }} | {{ .Site.Params.author.name }}
+    </title>
+    {{ partial "head.html" . }}
+</head>
 
-<div>
-    <div class="listHeader">
-        <h1>{{ .Title }}</h1>
-    </div>
+<body>
 
-    {{ with .Content }}
-    <div class="listContent">
-        {{- . -}}
-    </div>
-    {{ end }}
+    <div class="flexWrapper">
+        {{ partial "header.html" . }}
 
-    <div>
-        {{ range .Pages }}
+        <div class="content vertical">
+            <main class="main">
+                <div>
+                    <div class="listHeader">
+                        <h1>James' Blog</h1>
+                    </div>
 
-        <a class="postListLink" href="{{ .Permalink }}">
-            <div class="postListItem" role="listitem">
-                <div class="postHeader">
-                    <span class="postTitle">{{ .Title }}</span>
-                    {{ $formattedDate := .Date.Format "2006-01-02" }}
-                    <time class="postDate" datetime="{{ $formattedDate }}">{{ .Date | time.Format ":date_long" }}</time>
-                </div>
-                <div class="postExcerpt">
-                    <p>{{ .Summary }}</p>
-                </div>
-                <!-- Link to pages with the same tag -->
-                {{ if .Params.tags }}
-                <div class="postTags">
-                    {{ range .Params.tags }}
-                        {{ $tagName := . }}
-                        {{ $tagURL := printf "/tags/%s" $tagName | relURL }}
-                        <a href="{{ $tagURL }}" class="tag">#{{ $tagName }}</a>
+                    {{ with .Content }}
+                    <div class="listContent">
+                        {{- . -}}
+                    </div>
                     {{ end }}
+
+                    <div>
+                        {{ range .Paginator.Pages }}
+
+                        <a class="postListLink" href="{{ .Permalink }}">
+                            <div class="postListItem" role="listitem">
+                                <div class="postHeader">
+                                    <span class="postTitle">{{ .Title }}</span>
+                                    {{ $formattedDate := .Date.Format "2006-01-02" }}
+                                    <time class="postDate" datetime="{{ $formattedDate }}">{{ .Date | time.Format ":date_long" }}</time>
+                                </div>
+                                <div class="postExcerpt">
+                                    <p>{{ .Summary }}</p>
+                                </div>
+                                <!-- Link to pages with the same tag -->
+                                {{ if .Params.tags }}
+                                <div class="postTags">
+                                    {{ range .Params.tags }}
+                                        {{ $tagName := . }}
+                                        {{ $tagURL := printf "/tags/%s" $tagName | relURL }}
+                                        <a href="{{ $tagURL }}" class="tag">#{{ $tagName }}</a>
+                                    {{ end }}
+                                </div>
+                                {{ end }}
+                            </div>
+                        </a>
+
+                        {{ end }}
+                    </div>
                 </div>
-                {{ end }}
-            </div>
-        </a>
+            </main>
+        </div>
 
-
-        {{end}}
+        {{ partial "footer.html" . }}
     </div>
-</div>
 
-{{ end }}
+</body>
+
+</html>
