--- a/themes/nightfall/layouts/partials/header.html
+++ b/themes/nightfall/layouts/partials/header.html
@@ -19,4 +19,12 @@
             </ul>
         </nav>
     </div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5HRB2FFK4"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-F5HRB2FFK4');
+    </script>
 </header>
