remove useless side thingy

--- a/themes/nightfall/layouts/partials/header.html
+++ b/themes/nightfall/layouts/partials/header.html
@@ -1,10 +1,10 @@
 <header class="headerWrapper">
     <div class="header">
-        <div>
+        <!-- <div>
             <a class="terminal" href="{{ .Site.BaseURL }}">
                 <span>{{ .Site.Params.user }}@{{ .Site.Params.hostname }} ~ $</span>
             </a>
-        </div>
+        </div> -->
         <input class="side-menu" type="checkbox" id="side-menu">
         <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
         <nav class="headerLinks">
