change default about

--- a/themes/nightfall/layouts/index.html
+++ b/themes/nightfall/layouts/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
 <head> 
-<meta http-equiv="refresh" content="0; url=/post" />
+<meta http-equiv="refresh" content="0; url=/about" />
 </head> 
 </html>
